# furchain

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  VNML.md  demo.py  docker-compose.yml  pyproject.toml  vnml_booster.py
examples/: adventure_with_fox.py  clone_me.py  showcases.py  singer_change.py
furchain/: config.py  logger.py
furchain/action/: action_transpiler.py  schema.py
furchain/audio/: README.md  schema.py
furchain/audio/clone/: sovits.py
furchain/audio/conversion/: __init__.py  gpt_sovits_vc.py  rvc.py  sovits.py
furchain/audio/speech/: __init__.py  chat_tts.py  gpt_sovits.py  openai.py
furchain/audio/text_to_speech/: azure.py
furchain/audio/transcriptions/: __init__.py  funasr.py
furchain/audio/utils/: __init__.py  audio_editor.py  audio_iter.py  audio_iterator.py  audio_seperator.py  convert.py  get_format.py  microphone.py  play.py
furchain/audio/voice_conversion/: rvc.py  sovits.py
furchain/image/: schema.py
furchain/image/generation/: stable_diffusion_webui.py
furchain/interaction/: actions.py  schema.py  tools.py
furchain/text/: README.md  __init__.py  callbacks.py  chat_format.py  chat_message_history.py  chat_prompt_templates.py  grammars.py  interpreter.py  llama_cpp_client.py  output_parsers.py  schema.py  template_parsers.py  tools.py
furchain/utils/: broadcaster.py  iterator.py
presets/characters/: Ava Torres.json  Dash Howler.json  Seraphina Pawsley.json  Sophie Bennett.json  Zane Ryder.json  奔跑者豪勒.json  赞恩·赖德.json
presets/scenarios/: A Twist of Worlds.json  星空下.json
presets/scene/: Beneath the Starlit Sky.json  Stranger in a Strange Land.json
